# syscorun

./: README.md  pyproject.toml
src/syscorun/: __init__.py
src/test-rich/: print_markdown.py  print_math_markdown.py
